refactor: migrate Audiencia to ports and adapters architecture, introducing AudienciaRepositorio interface and JPA implementation. Update related services and controllers for improved conflict detection and error handling. Enhance documentation for API error responses and domain invariants.